@@ -1,3 +1,12 @@
+Wed Feb 14 14:50:37 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
+
+	* src/org/jcae/mesh/oemm/Storage.java
+	  src/org/jcae/mesh/oemm/RawOEMM.java
+	  src/org/jcae/mesh/oemm/OEMM.java
+	  src/org/jcae/mesh/oemm/RawStorage.java: Rename OEMM.nr_levels
+	into OEMM.depth; this field now always store OEMM depth, and is
+	set as "private transient".
+
 Tue Feb 13 15:34:15 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java
